--- a/index.css
+++ b/index.css
@@ -73,6 +73,7 @@ html {
   margin: 0;
 }
 
+/* list media + observer  */
 .list-media {
   height: 150px;
   width: 90%;
@@ -81,6 +82,14 @@ html {
   background-color: white;
   border: solid 1px #6495ed;
   border-radius: 20px;
+  transform: translateX(0);
+  opacity: 1;
+  transition: transform 0.4s, opacity 0.4s;
+}
+
+.list-media.not-visible {
+  transform: translateX(50px);
+  opacity: 0;
 }
 
 .image {
